--- a/Jogos/Lazerunner/LazeRunner_backup.html
+++ b/Jogos/Lazerunner/LazeRunner_backup.html
@@ -45,7 +45,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -54,21 +54,21 @@
       font-size: 48px;
       text-align: center;
     }
+    #startScreen.hidden, #gameOverScreen.hidden {
+      display: none;
+    }
     #startScreen button, #gameOverScreen button {
       margin: 20px;
       padding: 10px 20px;
       font-size: 24px;
       cursor: pointer;
-      background-color: #fff;
-      color: #000;
+      background-color: white;
+      color: black;
       border: none;
       border-radius: 5px;
     }
     #startScreen button:hover, #gameOverScreen button:hover:not(:disabled) {
       background-color: #ccc;
-    }
-    #startScreen.hidden, #gameOverScreen.hidden {
-      display: none;
     }
     #saveRankingButton:disabled {
       background-color: #888;
@@ -76,7 +76,6 @@
       cursor: not-allowed;
       opacity: 0.6;
     }
-    /* Estilo do botão Voltar */
     #backButton {
       position: absolute;
       top: 10px;
@@ -84,8 +83,8 @@
       padding: 8px 16px;
       font-size: 18px;
       cursor: pointer;
-      background-color: #fff;
-      color: #000;
+      background-color: white;
+      color: black;
       border: none;
       border-radius: 5px;
       z-index: 1000;
@@ -93,14 +92,34 @@
     #backButton:hover {
       background-color: #ccc;
     }
+    #immunityBar {
+      position: absolute;
+      top: 50px;
+      left: 180px;
+      width: 150px;
+      height: 20px;
+      border: 2px solid white;
+      background-color: #333;
+    }
+    #immunityFill {
+      height: 100%;
+      background-color: yellow;
+      transition: width 0.1s linear;
+    }
+    #immunityFill.cooldown {
+      background-color: gray;
+    }
   </style>
 </head>
 <body>
-  <button id="backButton" onclick="window.location.href = '../CentralJogos.html'">Voltar</button>
+  <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
   <canvas id="gameCanvas" width="900" height="900"></canvas>
   <div id="ranking">
     <h2>Ranking</h2>
     <ol id="rankingList"></ol>
+  </div>
+  <div id="immunityBar">
+    <div id="immunityFill"></div>
   </div>
   <div id="startScreen">
     <h1>LazerRunner</h1>
@@ -113,17 +132,15 @@
     <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
   <div id="footer">
-    Mover: Setas ou WASD<br />
-    Imunidade: Barra de espaço<br />
+    Mover: Setas ou WASD<br>
+    Imunidade: Barra de espaço<br>
     Reiniciar: Enter
   </div>
   <div id="version">Versão 1.3</div>
 
   <script>
-    document.addEventListener('contextmenu', e => {
-      e.preventDefault();
-      alert('Clique com o botão direito desativado.');
-    });
+    // Proteção básica
+    document.addEventListener('contextmenu', e => { e.preventDefault(); alert('Clique com o botão direito desativado.'); });
     document.addEventListener('keydown', e => {
       if (e.key === 'F12' || e.keyCode === 123) {
         e.preventDefault();
@@ -140,38 +157,32 @@
     const saveRankingButton = document.getElementById('saveRankingButton');
     const finalScoreText = document.getElementById('finalScore');
 
-    let gameStarted = false;
-    let scoreSaved = false;
-    const boundary = { x: 70, y: 70, width: canvas.width - 140, height: canvas.height - 140 };
+    let gameStarted = false, scoreSaved = false;
+    const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
     const player = {
-      x: canvas.width / 2,
-      y: canvas.height / 2,
+      x: canvas.width/2,
+      y: canvas.height/2,
       radius: 20,
       speed: 4,
       immune: false,
-      immuneTime: 0,
-      immuneDuration: 1500,
-      immuneCooldown: 2000,
-      lastImmuneEnd: 0
+      energy: 100, // Nível de energia (0-100)
+      energyCost: 2, // Custo por frame quando imune
+      rechargeRate: 0.5 // Recarga por frame quando não imune
     };
-    let bars = [];
-    let score = 0;
-    let gameOver = false;
+    let bars = [], score = 0, gameOver = false;
     let keys = {
-      ArrowUp: false, ArrowDown: false,
-      ArrowLeft: false, ArrowRight: false,
-      w: false, W: false,
-      s: false, S: false,
-      a: false, A: false,
-      d: false, D: false,
-      ' ': false, Enter: false
+      ArrowUp:false, ArrowDown:false,
+      ArrowLeft:false, ArrowRight:false,
+      w:false, W:false, s:false, S:false,
+      a:false, A:false, d:false, D:false,
+      ' ':false, Enter:false
     };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
     function saveRanking() {
       try {
         localStorage.setItem('rankings', JSON.stringify(rankings));
-      } catch (e) {
+      } catch {
         alert('Erro ao salvar a pontuação.');
       }
     }
@@ -179,46 +190,42 @@
     function updateRanking() {
       const list = document.getElementById('rankingList');
       list.innerHTML = '';
-      rankings.sort((a, b) => b.score - a.score)
-              .slice(0, 10)
-              .forEach(e => {
+      rankings.sort((a,b)=>b.score-a.score).slice(0,10).forEach(e => {
         const li = document.createElement('li');
         li.textContent = `${e.name} - ${e.score}`;
         list.appendChild(li);
       });
     }
 
+    function updateImmunityBar() {
+      const fill = document.getElementById('immunityFill');
+      fill.style.width = `${player.energy}%`;
+      fill.className = player.immune ? '' : 'cooldown';
+    }
+
     document.addEventListener('keydown', e => {
       if (e.key in keys) {
         keys[e.key] = true;
-
-        if (e.key === ' ' && !player.immune && Date.now() - player.lastImmuneEnd >= player.immuneCooldown) {
+        if (e.key === ' ' && !player.immune && player.energy >= 10) {
           player.immune = true;
-          player.immuneTime = Date.now();
         }
-
         if (e.key === 'Enter' && gameOver) resetGame();
       }
     });
 
     document.addEventListener('keyup', e => {
-      if (e.key in keys) keys[e.key] = false;
+      if (e.key in keys) {
+        keys[e.key] = false;
+        if (e.key === ' ') {
+          player.immune = false;
+        }
+      }
     });
 
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
-
+    playButton.addEventListener('click', () => { startScreen.classList.add('hidden'); gameStarted = true; resetGame(); });
+    restartButton.addEventListener('click', () => { gameOverScreen.classList.add('hidden'); resetGame(); });
     saveRankingButton.addEventListener('click', () => {
       if (scoreSaved) return;
-
       const name = prompt('Digite seu nome:');
       if (name && name.trim()) {
         rankings.push({ name: name.trim(), score });
@@ -234,9 +241,10 @@
     });
 
     function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
+      player.x = canvas.width/2;
+      player.y = canvas.height/2;
       player.immune = false;
+      player.energy = 100;
       score = 0;
       bars = [];
       gameOver = false;
@@ -245,64 +253,49 @@
       saveRankingButton.textContent = 'Salvar no Ranking';
       lastFrameTime = lastBarTime = 0;
       gameOverScreen.classList.add('hidden');
+      updateImmunityBar();
       requestAnimationFrame(gameLoop);
     }
 
     function createBar() {
-      const dir = Math.floor(Math.random() * 4);
+      const dir = Math.floor(Math.random()*4);
       const thickness = 30;
-      const length = Math.random() * 400 + 200;
-      const speed = 2 + Math.random() * 1.8;
+      const length = Math.random()*400 + 200;
+      const speed = 2 + Math.random()*1.8;
       let bar;
-      switch (dir) {
-        case 0:
-          bar = { x: -thickness, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: speed, dy: 0 };
-          break;
-        case 1:
-          bar = { x: canvas.width, y: Math.random() * (canvas.height - length), width: thickness, height: length, dx: -speed, dy: 0 };
-          break;
-        case 2:
-          bar = { x: Math.random() * (canvas.width - length), y: -thickness, width: length, height: thickness, dx: 0, dy: speed };
-          break;
-        case 3:
-          bar = { x: Math.random() * (canvas.width - length), y: canvas.height, width: length, height: thickness, dx: 0, dy: -speed };
-          break;
+      switch(dir) {
+        case 0: bar = { x:-thickness, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:speed, dy:0 }; break;
+        case 1: bar = { x:canvas.width, y:Math.random()*(canvas.height-length), width:thickness, height:length, dx:-speed, dy:0 }; break;
+        case 2: bar = { x:Math.random()*(canvas.width-length), y:-thickness, width:length, height:thickness, dx:0, dy:speed }; break;
+        case 3: bar = { x:Math.random()*(canvas.width-length), y:canvas.height, width:length, height:thickness, dx:0, dy:-speed }; break;
       }
       bars.push(bar);
     }
 
     function movePlayer(dt) {
-      let dx = 0, dy = 0;
-      if (keys.ArrowUp || keys.w) dy--;
-      if (keys.ArrowDown || keys.s) dy++;
-      if (keys.ArrowLeft || keys.a) dx--;
-      if (keys.ArrowRight || keys.d) dx++;
-
-      if (dx || dy) {
-        const len = Math.hypot(dx, dy);
-        player.x += (dx / len) * player.speed;
-        player.y += (dy / len) * player.speed;
-        player.x = Math.max(boundary.x + player.radius, Math.min(player.x, boundary.x + boundary.width - player.radius));
-        player.y = Math.max(boundary.y + player.radius, Math.min(player.y, boundary.y + boundary.height - player.radius));
+      let dx=0, dy=0;
+      if (keys.ArrowUp||keys.w) dy--;
+      if (keys.ArrowDown||keys.s) dy++;
+      if (keys.ArrowLeft||keys.a) dx--;
+      if (keys.ArrowRight||keys.d) dx++;
+      if (dx||dy) {
+        const len = Math.hypot(dx,dy);
+        player.x += (dx/len)*player.speed;
+        player.y += (dy/len)*player.speed;
+        player.x = Math.max(boundary.x+player.radius, Math.min(player.x, boundary.x+boundary.width-player.radius));
+        player.y = Math.max(boundary.y+player.radius, Math.min(player.y, boundary.y+boundary.height-player.radius));
       }
     }
 
     function moveBars(dt) {
-      bars.forEach(b => {
-        b.x += b.dx * dt;
-        b.y += b.dy * dt;
-      });
+      bars.forEach(b => { b.x += b.dx * dt; b.y += b.dy * dt; });
     }
 
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
-        if (
-          player.x + player.radius > b.x &&
-          player.x - player.radius < b.x + b.width &&
-          player.y + player.radius > b.y &&
-          player.y - player.radius < b.y + b.height
-        ) {
+        if (player.x+player.radius > b.x && player.x-player.radius < b.x+b.width &&
+            player.y+player.radius > b.y && player.y-player.radius < b.y+b.height) {
           gameOver = true;
           break;
         }
@@ -310,33 +303,35 @@
     }
 
     function manageImmunity() {
-      if (player.immune && Date.now() - player.immuneTime > player.immuneDuration) {
-        player.immune = false;
-        player.lastImmuneEnd = Date.now();
+      if (player.immune) {
+        player.energy = Math.max(0, player.energy - player.energyCost);
+        if (player.energy <= 0) {
+          player.immune = false;
+        }
+      } else {
+        player.energy = Math.min(100, player.energy + player.rechargeRate);
       }
+      updateImmunityBar();
     }
 
     function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.075)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
       if (!gameStarted) return;
 
       ctx.strokeStyle = 'white';
       ctx.lineWidth = 2;
-      ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
-
-      const now = Date.now();
-      const inCooldown = now - player.lastImmuneEnd < player.immuneCooldown;
-      const cooldownRemaining = Math.max(0, player.immuneCooldown - (now - player.lastImmuneEnd));
-      const immunityRemaining = player.immune ? Math.max(0, player.immuneDuration - (now - player.immuneTime)) : 0;
+      ctx.strokeRect(boundary.x, boundary.y, boundary.x+boundary.width, boundary.y+boundary.height);
 
       ctx.beginPath();
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI * 2);
-      ctx.fillStyle = player.immune ? 'yellow' : inCooldown ? '#444' : 'white';
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
+      ctx.fillStyle = player.immune ? 'yellow' : player.energy < 10 ? '#444' : 'white';
       ctx.fill();
 
       if (player.immune) {
         ctx.beginPath();
-        ctx.arc(player.x, player.y, player.radius + 10, 0, Math.PI * 2);
+        ctx.arc(player.x, player.y, player.radius+10, 0, Math.PI*2);
         ctx.strokeStyle = 'yellow';
         ctx.lineWidth = 3;
         ctx.stroke();
@@ -350,42 +345,32 @@
       ctx.textAlign = 'left';
       ctx.fillText(`Pontuação: ${score}`, 10, 30);
 
-      ctx.fillStyle = 'yellow';
-      ctx.font = '18px Arial';
-      ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 180, 28);
-
-      ctx.fillStyle = inCooldown ? 'gray' : 'green';
-      ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 340, 28);
-
       if (gameOver) {
         finalScoreText.textContent = `Pontuação Final: ${score}`;
         gameOverScreen.classList.remove('hidden');
       }
     }
 
-    let lastFrameTime = 0;
-    let lastBarTime = 0;
-
-    function gameLoop(timestamp) {
+    let lastFrameTime=0, lastBarTime=0;
+    function gameLoop(ts) {
       if (!gameStarted || gameOver) {
         draw();
         return;
       }
-
-      const dt = (timestamp - lastFrameTime) / 16.67;
-      lastFrameTime = timestamp;
+      const dt = (ts - lastFrameTime) / 16.67;
+      lastFrameTime = ts;
 
       let barInterval, numBars;
-      if (score <= 10) { barInterval = 4000; numBars = 2; }
-      else if (score <= 25) { barInterval = 3000; numBars = 2; }
-      else if (score <= 35) { barInterval = 4000; numBars = 3; }
-      else if (score <= 45) { barInterval = 3800; numBars = 3; }
-      else if (score <= 55) { barInterval = 4000; numBars = 4; }
-      else { barInterval = 3500; numBars = 3; }
+      if (score <= 10)       { barInterval = 4000; numBars = 2; }
+      else if (score <= 25)  { barInterval = 3000; numBars = 2; }
+      else if (score <= 35)  { barInterval = 4000; numBars = 3; }
+      else if (score <= 45)  { barInterval = 3800; numBars = 3; }
+      else if (score <= 55)  { barInterval = 4000; numBars = 4; }
+      else                   { barInterval = 3500; numBars = 3; }
 
-      if (timestamp - lastBarTime > barInterval) {
-        for (let i = 0; i < numBars; i++) createBar();
-        lastBarTime = timestamp;
+      if (ts - lastBarTime > barInterval) {
+        for (let i=0;i<numBars;i++) createBar();
+        lastBarTime = ts;
         score++;
       }
 
@@ -399,6 +384,7 @@
     }
 
     updateRanking();
+    updateImmunityBar();
     requestAnimationFrame(ts => {
       lastFrameTime = ts;
       lastBarTime = ts;
