--- a/Jogos/Lazerunner/LazeRunner.html
+++ b/Jogos/Lazerunner/LazeRunner.html
@@ -2,69 +2,51 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lazer Runner</title>
   <style>
-    /* Reset e básico */
     body {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px;
+      padding: 20px;
       margin: 0;
       background-color: #000;
       color: white;
       font-family: Arial, sans-serif;
-      min-height: 100vh;
-      box-sizing: border-box;
     }
-
-    #gameContainer {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      width: 100%;
-      max-width: 1000px;
-    }
-
     canvas {
       border: 2px solid #fff;
-      background-color: #111;
-      max-width: 100%;
-      height: auto;
-      aspect-ratio: 1 / 1;
-      flex-shrink: 0;
+      background: black;
     }
-
     #ranking {
       width: 250px;
-      max-width: 100%;
     }
     #ranking h2 {
       margin-top: 0;
     }
-
     #footer {
-      font-size: 16px;
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      font-size: 24px;
       color: #aaa;
-      margin-top: 20px;
-      text-align: center;
     }
-
     #version {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
       font-size: 14px;
       color: #aaa;
-      margin-top: 5px;
     }
-
     #startScreen, #gameOverScreen {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0,0,0,0.9);
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -72,7 +54,7 @@
       color: white;
       font-size: 48px;
       text-align: center;
-      z-index: 9999;
+      z-index: 10;
     }
     #startScreen.hidden, #gameOverScreen.hidden {
       display: none;
@@ -96,9 +78,8 @@
       cursor: not-allowed;
       opacity: 0.6;
     }
-
     #backButton {
-      position: fixed;
+      position: absolute;
       top: 10px;
       left: 10px;
       padding: 8px 16px;
@@ -108,21 +89,20 @@
       color: black;
       border: none;
       border-radius: 5px;
-      z-index: 10000;
+      z-index: 1000;
     }
     #backButton:hover {
       background-color: #ccc;
     }
-
     #immunityBar {
-      position: fixed;
-      top: 50px;
+      position: absolute;
+      top: 40px;
       left: 10px;
       width: 150px;
       height: 20px;
       border: 2px solid white;
       background-color: #333;
-      z-index: 10000;
+      z-index: 10;
     }
     #immunityFill {
       height: 100%;
@@ -132,92 +112,28 @@
     #immunityFill.cooldown {
       background-color: gray;
     }
-
-    /* Skin Selector */
-    #skinSelector {
-      margin-top: 20px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
-      max-width: 1000px;
-      width: 100%;
-    }
-    .skinOption {
-      width: 50px;
-      height: 50px;
-      border: 2px solid white;
-      border-radius: 50%;
-      cursor: pointer;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: bold;
-      font-size: 24px;
-      color: white;
-      user-select: none;
-      transition: transform 0.2s, border-color 0.3s;
-      flex-shrink: 0;
-    }
-    .skinOption.selected {
-      border-color: yellow;
-      transform: scale(1.2);
-      box-shadow: 0 0 10px yellow;
-    }
-
-    /* Responsividade */
-    @media(max-width: 720px) {
-      #gameContainer {
-        flex-direction: column;
-        align-items: center;
-      }
-      #ranking {
-        width: 90vw;
-        margin-top: 20px;
-      }
-      canvas {
-        width: 90vw !important;
-        height: auto !important;
-      }
-    }
-
   </style>
 </head>
 <body>
   <button id="backButton" onclick="window.location.href='../CentralJogos.html'">Voltar</button>
-
-  <div id="gameContainer">
-    <canvas id="gameCanvas" width="900" height="900"></canvas>
-    <div id="ranking">
-      <h2>Ranking</h2>
-      <ol id="rankingList"></ol>
-    </div>
+  <canvas id="gameCanvas" width="900" height="900"></canvas>
+  <div id="ranking">
+    <h2>Ranking</h2>
+    <ol id="rankingList"></ol>
   </div>
-
   <div id="immunityBar">
     <div id="immunityFill"></div>
   </div>
-
-  <div id="skinSelector" title="Escolha sua skin do jogador">
-    <div class="skinOption selected" data-skin="white" style="background-color: white;"></div>
-    <div class="skinOption" data-skin="red" style="background-color: red;"></div>
-    <div class="skinOption" data-skin="blue" style="background-color: blue;"></div>
-    <div class="skinOption" data-skin="green" style="background-color: green;"></div>
-    <div class="skinOption" data-skin="yellow" style="background-color: yellow; color: black;">&#9733;</div>
-  </div>
-
   <div id="startScreen">
     <h1>LazerRunner</h1>
     <button id="playButton">Play</button>
   </div>
-
   <div id="gameOverScreen" class="hidden">
     <h1>Game Over</h1>
     <p id="finalScore"></p>
     <button id="restartButton">Restart</button>
     <button id="saveRankingButton">Salvar no Ranking</button>
   </div>
-
   <div id="footer">
     Mover: Setas ou WASD<br>
     Imunidade: Barra de espaço<br>
@@ -245,22 +161,18 @@
     const finalScoreText = document.getElementById('finalScore');
     const immunityFill = document.getElementById('immunityFill');
 
-    const skinOptions = document.querySelectorAll('.skinOption');
-
     let gameStarted = false, scoreSaved = false;
-    const boundary = { x:70, y:70, width:900-140, height:900-140 };
+    const boundary = { x:70, y:70, width:canvas.width-140, height:canvas.height-140 };
     const player = {
-      x: 900/2,
-      y: 900/2,
+      x: canvas.width/2,
+      y: canvas.height/2,
       radius: 20,
       speed: 4,
       immune: false,
       energy: 100,
       energyCost: 2,
-      rechargeRate: 0.5,
-      skin: 'white'  // cor da skin
+      rechargeRate: 0.5
     };
-
     let bars = [], score = 0, gameOver = false;
     let keys = {
       ArrowUp:false, ArrowDown:false,
@@ -271,7 +183,10 @@
     };
     let rankings = JSON.parse(localStorage.getItem('rankings')) || [];
 
-    // --- Função para salvar ranking no localStorage ---
+    // Para rastro do jogador
+    let trail = [];
+    const maxTrailLength = 15;
+
     function saveRanking() {
       try {
         localStorage.setItem('rankings', JSON.stringify(rankings));
@@ -280,7 +195,6 @@
       }
     }
 
-    // --- Atualiza lista do ranking na tela ---
     function updateRanking() {
       const list = document.getElementById('rankingList');
       list.innerHTML = '';
@@ -291,13 +205,11 @@
       });
     }
 
-    // --- Atualiza barra de imunidade ---
     function updateImmunityBar() {
       immunityFill.style.width = `${player.energy}%`;
       immunityFill.className = player.immune ? '' : 'cooldown';
     }
 
-    // --- Controle de teclas ---
     document.addEventListener('keydown', e => {
       if (e.key in keys) {
         keys[e.key] = true;
@@ -317,23 +229,13 @@
       }
     });
 
-    // --- Eventos dos botões ---
-    playButton.addEventListener('click', () => {
-      startScreen.classList.add('hidden');
-      gameStarted = true;
-      resetGame();
-    });
-
-    restartButton.addEventListener('click', () => {
-      gameOverScreen.classList.add('hidden');
-      resetGame();
-    });
-
+    playButton.addEventListener('click', () => { startScreen.classList.add('hidden'); gameStarted = true; resetGame(); });
+    restartButton.addEventListener('click', () => { gameOverScreen.classList.add('hidden'); resetGame(); });
     saveRankingButton.addEventListener('click', () => {
       if (scoreSaved) return;
       const name = prompt('Digite seu nome:');
       if (name && name.trim()) {
-        rankings.push({ name: name.trim(), score });
+        rankings.push({ name: name.trim(), score: Math.floor(score) });
         saveRanking();
         updateRanking();
         scoreSaved = true;
@@ -345,25 +247,25 @@
       }
     });
 
-    // --- Reset do jogo ---
     function resetGame() {
-      player.x = canvas.width / 2;
-      player.y = canvas.height / 2;
+      player.x = canvas.width/2;
+      player.y = canvas.height/2;
       player.immune = false;
       player.energy = 100;
       score = 0;
       bars = [];
+      trail = [];
       gameOver = false;
       scoreSaved = false;
       saveRankingButton.disabled = false;
       saveRankingButton.textContent = 'Salvar no Ranking';
-      lastFrameTime = lastBarTime = 0;
+      lastFrameTime = 0;
+      lastBarTime = 0;
       gameOverScreen.classList.add('hidden');
       updateImmunityBar();
       requestAnimationFrame(gameLoop);
     }
 
-    // --- Criação das barras ---
     function createBar() {
       const dir = Math.floor(Math.random()*4);
       const thickness = 30;
@@ -379,7 +281,6 @@
       bars.push(bar);
     }
 
-    // --- Movimento do jogador ---
     function movePlayer(dt) {
       let dx=0, dy=0;
       if (keys.ArrowUp||keys.w) dy--;
@@ -395,12 +296,10 @@
       }
     }
 
-    // --- Movimento das barras ---
     function moveBars(dt) {
       bars.forEach(b => { b.x += b.dx * dt; b.y += b.dy * dt; });
     }
 
-    // --- Checar colisões ---
     function checkCollisions() {
       if (player.immune) return;
       for (const b of bars) {
@@ -412,37 +311,39 @@
       }
     }
 
-    // --- Atualizar energia do jogador ---
-    function updateEnergy(dt) {
+    function manageImmunity() {
       if (player.immune) {
-        player.energy -= player.energyCost * dt;
+        player.energy = Math.max(0, player.energy - player.energyCost);
         if (player.energy <= 0) {
-          player.energy = 0;
           player.immune = false;
         }
       } else {
-        player.energy += player.rechargeRate * dt;
-        if (player.energy > 100) player.energy = 100;
+        player.energy = Math.min(100, player.energy + player.rechargeRate);
       }
       updateImmunityBar();
     }
 
-    // --- Desenhar jogador com skin ---
-    function drawPlayer() {
-      ctx.beginPath();
-      ctx.fillStyle = player.skin;
-      ctx.shadowColor = player.skin;
-      ctx.shadowBlur = 20;
-      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
-      ctx.fill();
-      ctx.shadowBlur = 0;
-      // Contorno mais claro
-      ctx.strokeStyle = 'white';
-      ctx.lineWidth = 2;
-      ctx.stroke();
+    function drawTrail() {
+      for (let i = 0; i < trail.length; i++) {
+        const pos = trail[i];
+        const alpha = (i + 1) / trail.length / 3; // opacidade menor para pontos mais antigos
+        ctx.beginPath();
+        ctx.fillStyle = `rgba(255, 255, 255, ${alpha})`;
+        ctx.arc(pos.x, pos.y, player.radius * 0.7, 0, Math.PI * 2);
+        ctx.fill();
+      }
     }
 
-    // --- Desenhar barras ---
+    function drawPlayer() {
+      ctx.beginPath();
+      ctx.arc(player.x, player.y, player.radius, 0, Math.PI*2);
+      ctx.fillStyle = player.immune ? 'yellow' : 'white';
+      ctx.shadowColor = player.immune ? 'yellow' : 'transparent';
+      ctx.shadowBlur = player.immune ? 15 : 0;
+      ctx.fill();
+      ctx.shadowBlur = 0;
+    }
+
     function drawBars() {
       ctx.fillStyle = 'red';
       bars.forEach(b => {
@@ -450,38 +351,34 @@
       });
     }
 
-    // --- Desenhar borda da área ---
     function drawBoundary() {
       ctx.strokeStyle = 'white';
-      ctx.lineWidth = 3;
+      ctx.lineWidth = 5;
       ctx.strokeRect(boundary.x, boundary.y, boundary.width, boundary.height);
     }
 
-    // --- Desenhar pontuação ---
+    function clearScreen() {
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+    }
+
     function drawScore() {
       ctx.fillStyle = 'white';
       ctx.font = '24px Arial';
-      ctx.fillText('Score: ' + score, 20, 40);
+      ctx.fillText('Score: ' + Math.floor(score), 20, 40);
     }
 
-    // --- Limpar tela ---
-    function clearScreen() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-    }
-
-    // --- Atualizar e desenhar tudo ---
     let lastFrameTime = 0;
     let lastBarTime = 0;
 
     function gameLoop(timestamp=0) {
       if (!gameStarted || gameOver) {
         if (gameOver) {
-          finalScoreText.textContent = `Sua pontuação: ${score}`;
+          finalScoreText.textContent = `Sua pontuação: ${Math.floor(score)}`;
           gameOverScreen.classList.remove('hidden');
         }
         return;
       }
-      const dt = (timestamp - lastFrameTime) / 16.666; // approx 60fps base
+      const dt = (timestamp - lastFrameTime) / 16.666; // base 60fps
       lastFrameTime = timestamp;
 
       clearScreen();
@@ -489,55 +386,37 @@
       movePlayer(dt);
       moveBars(dt);
       checkCollisions();
-      updateEnergy(dt);
+      manageImmunity();
 
       // Criar novas barras a cada 2 segundos
       lastBarTime += dt;
-      if (lastBarTime > 120) { // Ajustado para frames
+      if (lastBarTime > 120) {
         createBar();
         lastBarTime = 0;
       }
 
-      // Remover barras que saíram da tela para economizar processamento
+      // Remove barras fora da tela
       bars = bars.filter(b =>
         b.x + b.width > -50 && b.x < canvas.width + 50 &&
         b.y + b.height > -50 && b.y < canvas.height + 50
       );
 
+      // Atualizar rastro do jogador
+      trail.push({x: player.x, y: player.y});
+      if (trail.length > maxTrailLength) trail.shift();
+
+      drawTrail();
       drawBars();
       drawPlayer();
       drawScore();
 
-      score += dt * 0.5; // Pontuação aumenta com o tempo
+      // Incrementa score lentamente (1 ponto por segundo aprox)
+      score += dt * 0.016;
 
       requestAnimationFrame(gameLoop);
     }
 
-    // --- Skin selector ---
-    skinOptions.forEach(option => {
-      option.addEventListener('click', () => {
-        skinOptions.forEach(o => o.classList.remove('selected'));
-        option.classList.add('selected');
-        player.skin = option.dataset.skin;
-      });
-    });
-
-    // --- Responsividade do canvas ---
-    function resizeCanvas() {
-      // Manter a área de jogo quadrada e ajustável
-      const maxWidth = window.innerWidth * 0.9;
-      const maxHeight = window.innerHeight * 0.8;
-      const size = Math.min(maxWidth, maxHeight, 900);
-      canvas.style.width = size + 'px';
-      canvas.style.height = size + 'px';
-    }
-
-    window.addEventListener('resize', resizeCanvas);
-    window.addEventListener('load', () => {
-      resizeCanvas();
-      updateRanking();
-    });
-
+    updateRanking();
   </script>
 </body>
 </html>
